--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -248,6 +248,29 @@
         </div>
     </section>
 
+    <!-- Music/Video Section -->
+    <section class="section">
+        <h2>Music/Video</h2>
+        <div class="magazine-layout">
+            <div class="magazine-item" data-link="https://example.com/music1">
+                <img src="../images/music1.jpg" alt="Music 1">
+                <div class="magazine-details">Music 1: Description of the music</div>
+            </div>
+            <div class="magazine-item" data-link="https://example.com/music2">
+                <img src="../images/music2.jpg" alt="Music 2">
+                <div class="magazine-details">Music 2: Another music description</div>
+            </div>
+            <div class="magazine-item" data-link="https://example.com/video1">
+                <img src="../images/video1.jpg" alt="Video 1">
+                <div class="magazine-details">Video 1: Description of the video</div>
+            </div>
+            <div class="magazine-item" data-link="https://example.com/video2">
+                <img src="../images/video2.jpg" alt="Video 2">
+                <div class="magazine-details">Video 2: Another video description</div>
+            </div>
+        </div>
+    </section>
+
     <!-- Modal -->
     <div class="modal" id="modal">
         <span class="modal-close" id="modal-close">&times;</span>
