--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -214,59 +214,105 @@
         </div>
     </section>
 
-    <!-- Photography Section -->
-    <section class="section">
-        <h2>Photography</h2>
-        <div class="magazine-layout">
-            <div class="magazine-item" data-link="https://example.com/photo1">
-                <img src="../images/photo1.jpg" alt="Photo 1">
-                <div class="magazine-details">Photo 1: Description of the photo</div>
-            </div>
-            <div class="magazine-item" data-link="https://example.com/photo2">
-                <img src="../images/photo2.jpg" alt="Photo 2">
-                <div class="magazine-details">Photo 2: Another photo description</div>
-            </div>
+<!-- Photography Section -->
+<section class="section">
+    <h2>Photography</h2>
+    <div class="magazine-layout">
+        <div class="magazine-item" data-link="https://example.com/photo1">
+            <img src="../images/photo1.jpg" alt="Photo 1">
         </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section class="section">
-        <h2>Projects</h2>
-        <div class="project-wall">
-            <div class="project-item" data-link="../projects/project1.pdf">
-                <img src="../images/project1.jpg" alt="Project 1">
-                <div class="project-details">Project 1: Description of the project</div>
-            </div>
-            <div class="project-item" data-link="../projects/project2.pdf">
-                <img src="../images/project2.jpg" alt="Project 2">
-                <div class="project-details">Project 2: Another project description</div>
-            </div>
-            <div class="project-item" data-link="../projects/project3.pdf">
-                <img src="../images/project3.jpg" alt="Project 3">
-                <div class="project-details">Project 3: Yet another project</div>
-            </div>
+        <div class="magazine-item" data-link="https://example.com/photo2">
+            <img src="../images/photo2.jpg" alt="Photo 2">
         </div>
-    </section>
+        <div class="magazine-item" data-link="https://example.com/photo3">
+            <img src="../images/photo3.jpg" alt="Photo 3">
+        </div>
+        <div class="magazine-item" data-link="https://example.com/photo4">
+<!-- Photography Section -->
+<section class="section">
+    <h2>Photography</h2>
+    <div class="magazine-layout">
+        <div class="magazine-item">
+            <img src="../images/photo1.jpg" alt="Photo 1">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo2.jpg" alt="Photo 2">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo3.jpg" alt="Photo 3">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo4.jpg" alt="Photo 4">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo5.jpg" alt="Photo 5">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo6.jpg" alt="Photo 6">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo7.jpg" alt="Photo 7">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo8.jpg" alt="Photo 8">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo9.jpg" alt="Photo 9">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo10.jpg" alt="Photo 10">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo11.jpg" alt="Photo 11">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo12.jpg" alt="Photo 12">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo13.jpg" alt="Photo 13">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo14.jpg" alt="Photo 14">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/photo15.jpg" alt="Photo 15">
+        </div>
+    </div>
+</section>
 
+
+ 
     <!-- Music/Video Section -->
     <section class="section">
-        <h2>Music/Video</h2>
+        <h2>Music/Video/Project</h2>
         <div class="magazine-layout">
-            <div class="magazine-item" data-link="https://example.com/music1">
+            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=M0Yke3TWfmM">
                 <img src="../images/music1.jpg" alt="Music 1">
-                <div class="magazine-details">Music 1: Description of the music</div>
+                <div class="magazine-details">Easy Wealth TVC</div>
             </div>
-            <div class="magazine-item" data-link="https://example.com/music2">
+            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1wg411H7ZW/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
                 <img src="../images/music2.jpg" alt="Music 2">
-                <div class="magazine-details">Music 2: Another music description</div>
+                <div class="magazine-details">A Dreamy Summer</div>
             </div>
-            <div class="magazine-item" data-link="https://example.com/video1">
+            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=DWQH679JIMg">
                 <img src="../images/video1.jpg" alt="Video 1">
-                <div class="magazine-details">Video 1: Description of the video</div>
+                <div class="magazine-details">Spring Damp</div>
             </div>
-            <div class="magazine-item" data-link="https://example.com/video2">
+            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1Nz4y1C76k/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
                 <img src="../images/video2.jpg" alt="Video 2">
-                <div class="magazine-details">Video 2: Another video description</div>
+                <div class="magazine-details">the Youth in the Pandemic</div>
+            </div>
+            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV1Ms4y1C7tJ/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
+                <img src="../images/video3.jpg" alt="Video 3">
+                <div class="magazine-details">Be a teacher, be a student</div>
+            </div>
+            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV16e411J736/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6>
+                <img src="../images/video4.jpg" alt="Video 4">
+                <div class="magazine-details">School Games Record</div>
+            </div>
+            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=xpWXw67ZgsI>
+                <img src="../images/video4.jpg" alt="Video 5">
+                <div class="magazine-details">the Judgement Day</div>
             </div>
         </div>
     </section>
