--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -166,68 +166,64 @@
         <div class="photo-wall">
             <div class="photo-item" data-link="https://example.com/news1">
                 <img src="../images/news1.jpg" alt="News 1">
-                <div class="photo-details">News 1: Description of the article</div>
+                <div class="photo-details">Origin of Dongjiang River</div>
             </div>
             <div class="photo-item" data-link="https://example.com/news2">
                 <img src="../images/news2.jpg" alt="News 2">
-                <div class="photo-details">News 2: Another article description</div>
+                <div class="photo-details">Shandong Beauty Industry</div>
             </div>
             <div class="photo-item" data-link="https://example.com/news3">
                 <img src="../images/news3.jpg" alt="News 3">
-                <div class="photo-details">News 3: Yet another article</div>
+                <div class="photo-details">Shandong TCM Company</div>
             </div>
             <div class="photo-item" data-link="https://example.com/news4">
                 <img src="../images/news4.jpg" alt="News 4">
-                <div class="photo-details">News 4: Another article description</div>
+                <div class="photo-details">Jiangzhong Group Nanchang Factory</div>
             </div>
             <div class="photo-item" data-link="https://example.com/news5">
                 <img src="../images/news5.jpg" alt="News 5">
-                <div class="photo-details">News 5: Another article description</div>
+                <div class="photo-details">Hometown of Confucius</div>
             </div>
             <div class="photo-item" data-link="https://example.com/news6">
                 <img src="../images/news6.jpg" alt="News 6">
-                <div class="photo-details">News 6: Another article description</div>
+                <div class="photo-details">HK& Jiangxi Communication</div>
             </div>
         </div>
     </section>
 
     <!-- Poster Design Section -->
-    <section class="section">
-        <h2>Poster Design</h2>
-        <div class="magazine-layout">
-            <div class="magazine-item" data-link="https://example.com/poster1">
-                <img src="../images/poster1.png" alt="Poster 1">
-                <div class="magazine-details">Poster 1: Description of the design</div>
-            </div>
-            <div class="magazine-item" data-link="https://example.com/poster2">
-                <img src="../images/poster2.png" alt="Poster 2">
-                <div class="magazine-details">Poster 2: Another design description</div>
-            </div>
-            <div class="magazine-item" data-link="https://example.com/poster3">
-                <img src="../images/poster3.png" alt="Poster 3">
-                <div class="magazine-details">Poster 3: Another design description</div>
-            </div>
-            <div class="magazine-item" data-link="https://example.com/poster4">
-                <img src="../images/poster4.png" alt="Poster 4">
-                <div class="magazine-details">Poster 4: Another design description</div>
-            </div>
-        </div>
-    </section>
-
-<!-- Photography Section -->
 <section class="section">
-    <h2>Photography</h2>
+    <h2>Poster Design</h2>
     <div class="magazine-layout">
-        <div class="magazine-item" data-link="https://example.com/photo1">
-            <img src="../images/photo1.jpg" alt="Photo 1">
+        <div class="magazine-item">
+            <img src="../images/poster1.png" alt="Poster 1">
         </div>
-        <div class="magazine-item" data-link="https://example.com/photo2">
-            <img src="../images/photo2.jpg" alt="Photo 2">
+        <div class="magazine-item">
+            <img src="../images/poster2.png" alt="Poster 2">
         </div>
-        <div class="magazine-item" data-link="https://example.com/photo3">
-            <img src="../images/photo3.jpg" alt="Photo 3">
+        <div class="magazine-item">
+            <img src="../images/poster3.png" alt="Poster 3">
         </div>
-        <div class="magazine-item" data-link="https://example.com/photo4">
+        <div class="magazine-item">
+            <img src="../images/poster4.png" alt="Poster 4">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/poster5.png" alt="Poster 5">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/poster6.png" alt="Poster 6">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/poster7.png" alt="Poster 7">
+        </div>
+        <div class="magazine-item">
+            <img src="../images/poster8.png" alt="Poster 8">
+        </div>
+    </div>
+</section>
+
+
+
 <!-- Photography Section -->
 <section class="section">
     <h2>Photography</h2>
@@ -306,12 +302,12 @@
                 <img src="../images/video3.jpg" alt="Video 3">
                 <div class="magazine-details">Be a teacher, be a student</div>
             </div>
-            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV16e411J736/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6>
+            <div class="magazine-item" data-link="https://www.bilibili.com/video/BV16e411J736/?spm_id_from=333.1387.homepage.video_card.click&vd_source=2a8fb91df97f5b7ac3e78a7ee05419a6">
                 <img src="../images/video4.jpg" alt="Video 4">
                 <div class="magazine-details">School Games Record</div>
             </div>
-            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=xpWXw67ZgsI>
-                <img src="../images/video4.jpg" alt="Video 5">
+            <div class="magazine-item" data-link="https://www.youtube.com/watch?v=xpWXw67ZgsI">
+                <img src="../images/video5.jpg" alt="Video 5">
                 <div class="magazine-details">the Judgement Day</div>
             </div>
         </div>
