--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
         <ul>
           <li><a class="brand" href="#about">Peter HUANG Yifei</a></li>
           <li><a id="subpage" href="subpage/my_work.html">My Work</a></li>
-          <li><button id="contact" type="button">Contact Me</button></li>
         </ul>
       </nav>
 
       <section class="hero" id="about" aria-labelledby="hero-name">
         <div class="hero-left">
-          <img class="avatar" src="me.jpg" alt="Yifei portrait" loading="lazy" />
+          <img class="avatar" src="me.JPG" alt="Yifei portrait" loading="lazy" />
         </div>
 
         <div class="hero-right">
