--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <section class="hero" id="about" aria-labelledby="hero-name">
         <div class="hero-left">
-          <img class="avatar" src="me.JPG" alt="Yifei portrait" loading="lazy" />
+          <img class="avatar" src="me.jpg" alt="Yifei portrait" loading="lazy" />
         </div>
 
         <div class="hero-right">
