--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -26,7 +26,7 @@
             padding: 20px;
         }
 
-        /* 返回主页按钮样式 */
+        /* 返回主页按钮样式1 */
         .back-home {
             display: block;
             margin: 20px auto;
