--- a/subpage/my_work.html
+++ b/subpage/my_work.html
@@ -265,13 +265,13 @@
             <img src="../images/photo12.jpg" alt="Photo 12">
         </div>
         <div class="magazine-item">
-            <img src="../images/photo13.jpg" alt="Photo 13">
+            <img src="../images/photo13.JPG" alt="Photo 13">
         </div>
         <div class="magazine-item">
-            <img src="../images/photo14.jpg" alt="Photo 14">
+            <img src="../images/photo14.JPG" alt="Photo 14">
         </div>
         <div class="magazine-item">
-            <img src="../images/photo15.jpg" alt="Photo 15">
+            <img src="../images/photo15.JPG" alt="Photo 15">
         </div>
     </div>
 </section>
